# bev-stack

./: .gitignore  README.md  pyproject.toml
backend/apps/: export_nuscenes_sample.py  export_sample_scene_frame.py  inspect_scene_frame.py
backend/bevstack/: __init__.py
backend/bevstack/core/: frames.py  schema.py  timestamps.py  validation.py
backend/bevstack/datasets/nuscenes/: adapter.py  config.py  paths.py
backend/bevstack/export/: __init__.py  scene_exporter.py
configs/: nuscenes_mini.yaml
docs/: architecture.md  coordinate_frames.md  nuscenes_setup.md  roadmap.md  schema.md
examples/scene_frames/: sample_scene_frame.json
frontend/: index.html  package-lock.json  package.json
frontend/public/scene_frames/: nuscenes_sample_frame.json
frontend/src/: App.tsx  styles.css
frontend/src/rendering/: BevCanvas.tsx
frontend/src/schema/: sceneFrame.ts
tests/: test_nuscenes_adapter.py  test_nuscenes_paths.py  test_scene_exporter.py  test_scene_frame_validation.py  test_schema_contracts.py
