[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bevstack"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "nuscenes-devkit>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/bevstack"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
